--- a/style.css
+++ b/style.css
@@ -57,21 +57,65 @@ header {
   color: #fff;
 }
 
-.main {
-  width: 840px;
+main {
+  width: 800px;
+  padding: 70px 0;
   display: flex;
   justify-content: center;
   margin: 0 auto;
 }
 
 .blog {
-  width: 600px;
-  height: 1400px;
+  width: 540px;
+  margin-right: 30px;
+}
+
+.blog-heading {
+  border-bottom: 8px solid #f7f7f7;
+  text-align: center;
+  line-height: 0.6;
+}
+
+.blog-box {
+  padding-top: 50px;
+}
+
+.blog-item {
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #f7f7f7;
+  display: flex;
+  justify-content: start;
+}
+
+.blog-image {
+  height: 180px;
+}
+
+.blog-text {
+  padding: 25px 0 0 30px;
+}
+
+.blog-text-heading {
+  padding-bottom: 15px;
+}
+
+.blog-date {
+  display: inline-block;
+  font-size: 19px;
+}
+
+.category {
+  background-color: #acabab;
+  border-radius: 3px;
+  padding: 5px 8px;
+  color: #fff;
+  font-size: 11px;
+  display: inline-block;
 }
 
 .sidebar {
-  width: 240px;
-  height: 1400px;
+  width: 230px;
 }
 
 footer {
