--- a/style.css
+++ b/style.css
@@ -82,7 +82,6 @@ main {
 
 .blog-item {
   padding-bottom: 20px;
-  margin-bottom: 20px;
   border-bottom: 1px solid #f7f7f7;
   display: flex;
   justify-content: start;
@@ -114,6 +113,21 @@ main {
   display: inline-block;
 }
 
+.pagination {
+  text-align: center;
+  padding-top: 50px;
+}
+
+.pagination p {
+  display: inline-block;
+  background-color: #acabab;
+  width: 30px;
+  height: 30px;
+  border-radius: 3px;
+  color: #fff;
+  line-height: 30px;
+  margin: 0 5px;
+}
 .sidebar {
   width: 230px;
 }
