--- a/style.css
+++ b/style.css
@@ -9,14 +9,34 @@ a {
   text-decoration: none;
 }
 
+header,
+nav,
+h2,
+.main-visual,
+footer footer-text {
+  font-family: Chalkduster, "Bradley Hand", Courier, "Segoe Print", sans-serif;
+}
+
 header {
   width: 90%;
   padding: 15px 0;
   margin: 0 auto;
   text-align: center;
+  position: relative;
 }
 
-.heading {
+.social {
+  position: absolute;
+  top: 22px;
+  right: 22px;
+}
+
+.social i {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+header .heading {
   font-size: 32px;
 }
 
@@ -34,7 +54,7 @@ header {
 
 .main-visual {
   width: 100%;
-  height: 350px;
+  height: 300px;
   background-image: url(img/mv.jpg);
   background-size: cover;
   background-position: center;
@@ -42,7 +62,7 @@ header {
 
 .main-visual-content {
   width: 40%;
-  height: 350px;
+  height: 300px;
   background-color: rgba(0, 0, 0, 0.5);
   text-align: center;
   padding-top: 105px;
@@ -83,6 +103,7 @@ main {
 .blog-item {
   padding-bottom: 20px;
   border-bottom: 1px solid #f7f7f7;
+  margin-bottom: 20px;
   display: flex;
   justify-content: start;
 }
@@ -128,16 +149,81 @@ main {
   line-height: 30px;
   margin: 0 5px;
 }
+
 .sidebar {
   width: 230px;
+}
+
+.common-heading {
+  border-bottom: 8px solid #f7f7f7;
+  text-align: center;
+  line-height: 0.6;
+}
+
+.sidebar-contents {
+  padding: 50px 0;
+}
+
+.popular-text,
+.categories-text {
+  padding-bottom: 5px;
+  border-bottom: 1px solid #f7f7f7;
+  margin-bottom: 5px;
+}
+.popular-text:last-child,
+.categories-text:last-child {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.instagram .sidebar-contents {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.instagram-box {
+  width: 110px;
+  padding-top: 110px;
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 10px;
+}
+
+.instagram-box:nth-child(odd) {
+  margin-right: 10px;
+}
+
+.instagram-box:nth-child(1) {
+  background-image: url(img/airport.jpg);
+}
+
+.instagram-box:nth-child(2) {
+  background-image: url(img/japan.jpg);
+}
+
+.instagram-box:nth-child(3) {
+  background-image: url(img/snow.jpg);
+}
+
+.instagram-box:nth-child(4) {
+  background-image: url(img/japan2.jpg);
+}
+
+.instagram-box:nth-child(5) {
+  background-image: url(img/lake.jpg);
+}
+
+.instagram-box:nth-child(6) {
+  background-image: url(img/road.jpg);
 }
 
 footer {
   width: 100%;
   height: 120px;
   text-align: center;
-  background-color: #848282;
   line-height: 120px;
+  background-color: #848282;
 }
 
 .footer-text {
